# RustShard-Compiler

./: CMakeLists.txt  Makefile  README.md  main.cpp  temp.txt
test/semantic-1/: CMakeLists.txt  semantic-1-test.cpp  semantic-1_gtest.cpp
test/semantic-1/array1/: testcase_info.json
test/semantic-1/array2/: testcase_info.json
test/semantic-1/array3/: testcase_info.json
test/semantic-1/array4/: testcase_info.json
test/semantic-1/array5/: testcase_info.json
test/semantic-1/array6/: testcase_info.json
test/semantic-1/array7/: testcase_info.json
test/semantic-1/array8/: testcase_info.json
test/semantic-1/basic1/: testcase_info.json
test/semantic-1/basic10/: testcase_info.json
test/semantic-1/basic11/: testcase_info.json
test/semantic-1/basic12/: testcase_info.json
test/semantic-1/basic13/: testcase_info.json
test/semantic-1/basic14/: testcase_info.json
test/semantic-1/basic15/: testcase_info.json
test/semantic-1/basic16/: testcase_info.json
test/semantic-1/basic17/: testcase_info.json
test/semantic-1/basic18/: testcase_info.json
test/semantic-1/basic19/: testcase_info.json
test/semantic-1/basic2/: testcase_info.json
test/semantic-1/basic20/: testcase_info.json
test/semantic-1/basic21/: testcase_info.json
test/semantic-1/basic22/: testcase_info.json
test/semantic-1/basic23/: testcase_info.json
test/semantic-1/basic24/: testcase_info.json
test/semantic-1/basic25/: testcase_info.json
test/semantic-1/basic26/: testcase_info.json
test/semantic-1/basic27/: testcase_info.json
test/semantic-1/basic28/: testcase_info.json
test/semantic-1/basic29/: testcase_info.json
test/semantic-1/basic3/: testcase_info.json
test/semantic-1/basic30/: testcase_info.json
test/semantic-1/basic31/: testcase_info.json
test/semantic-1/basic32/: testcase_info.json
test/semantic-1/basic33/: testcase_info.json
test/semantic-1/basic34/: testcase_info.json
test/semantic-1/basic35/: testcase_info.json
test/semantic-1/basic36/: testcase_info.json
test/semantic-1/basic37/: testcase_info.json
test/semantic-1/basic38/: testcase_info.json
test/semantic-1/basic39/: testcase_info.json
test/semantic-1/basic4/: testcase_info.json
test/semantic-1/basic40/: testcase_info.json
test/semantic-1/basic5/: testcase_info.json
test/semantic-1/basic6/: testcase_info.json
test/semantic-1/basic7/: testcase_info.json
test/semantic-1/basic8/: testcase_info.json
test/semantic-1/basic9/: testcase_info.json
test/semantic-1/expr11/: testcase_info.json
test/semantic-1/expr12/: testcase_info.json
test/semantic-1/expr13/: testcase_info.json
test/semantic-1/expr15/: testcase_info.json
test/semantic-1/expr17/: testcase_info.json
(+303 files in other folders)
